--- a/index.html
+++ b/index.html
@@ -1,60 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- Standard Meta -->
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
-	<!-- Site Properities -->
-	<title>Homepage Example - Semantic</title>
-
+	<title>第17x20屆 建北電資研 聯合幹部訓練營</title>
 	<link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
 	<script src="dist/semantic.min.js"></script>
 	<script src="script.js"></script>
-
 </head>
 <body id="home">
 	<div class="ui inverted masthead segment">
 		<div class="ui page grid">
 			<div class="column">
 				<div class="ui inverted blue menu">
-					<div class="header item">Cat University</div>
+					<div class="header item">建北電資研</div>
 					<div class="right menu">
-						<div class="ui mobile dropdown link item">
-							Menu
+						<div class="ui mobile dropdown link item">選項
 							<i class="dropdown icon"></i>
 							<div class="menu">
-								<a class="item">Classes</a>
-								<a class="item">Cocktail Hours</a>
-								<a class="item">Community</a>
+								<a class="item">建中電研社社團網站</a>
+								<a class="item">北一資研社社團 BBS 站</a>
+								<a class="item">聯絡我們</a>
 							</div>
 						</div>
-						<div class="ui dropdown link item">
-							Courses
-							<i class="dropdown icon"></i>
-							<div class="menu">
-								<a class="item">Petting</a>
-								<a class="item">Feeding</a>
-								<a class="item">Mind Reading</a>
-							</div>
-						</div>
-						<a class="item">Library</a>
-						<a class="item">Community</a>
+						<a class="item">建中電研社社團網站</a>
+						<a class="item">北一資研社社團 BBS 站</a>
+						<a class="item">聯絡我們</a>
 					</div>
 				</div>
 				<img src="images/cat.png" class="ui medium image">
 				<div class="ui hidden transition information">
-					<h1 class="ui inverted header">
-						An Old Cat Can Learn New Tricks
-					</h1>
-					<p>At least he won't reach his highest potential unless you enroll him in Cat University's 2013 class.</p>
+					<h1 class="ui inverted header">第17x20屆 建北電資研 聯合幹部訓練營<br>
+					17x20th CKEFGISC United Leader Training Camp</h1>
+					<p>Tell people what is ADA ?</p>
 					<div class="large basic inverted animated fade ui button">
-						<div class="visible content">Come to ICU 2013</div>
-						<div class="hidden content">Register Now</div>
+						<div class="visible content">參加 ADA 2015</div>
+						<div class="hidden content">立刻報名！</div>
 					</div>
 				</div>
 			</div>
@@ -105,7 +89,6 @@
 			</div>
 		</div>
 	</div>
-
 	<div class="ui inverted vertical segment">
 		<div class="ui very relaxed stackable page grid">
 			<div class="row">
@@ -158,7 +141,6 @@
 			</div>
 		</div>
 	</div>
-
 	<div class="ui vertical segment">
 		<div class="ui stackable center aligned page grid">
 			<div class="row">
@@ -269,7 +251,6 @@
 			</div>
 		</div>
 	</div>
-
 	<div class="ui inverted footer vertical segment">
 		<div class="ui stackable center aligned page grid">
 			<div class="ten wide column">
@@ -311,5 +292,4 @@
 		</div>
 	</div>
 </body>
-
 </html>
