Designing Front-end

--- a/index.html
+++ b/index.html
@@ -4,92 +4,71 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<title>第17x20屆 建北電資研 聯合幹部訓練營</title>
+	<title>17&times;20th 建北電資研聯合幹部訓練營</title>
 	<link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="dist/semantic.min.js"></script>
 	<script src="script.js"></script>
 </head>
 <body id="home">
-	<div class="ui inverted masthead segment">
+	<header class="ui inverted masthead segment">
 		<div class="ui page grid">
 			<div class="column">
 				<div class="ui inverted blue menu">
-					<div class="header item">建北電資研</div>
+					<div class="header item">CKEFGISC 2015</div>
 					<div class="right menu">
 						<div class="ui mobile dropdown link item">選項
 							<i class="dropdown icon"></i>
 							<div class="menu">
-								<a class="item">建中電研社社團網站</a>
-								<a class="item">北一資研社社團 BBS 站</a>
-								<a class="item">聯絡我們</a>
+								<a class="item" href="http://ckeisc.nctucs.net/" target="_blank">建中電研社社團網站</a>
+								<a class="item" href="telnet://fgisc.org/" target="_blank">北一資研社社團 BBS 站</a>
+								<a class="item" href="mailto:yuwen41200.cs03@nctu.edu.tw" target="_blank">聯絡我們</a>
 							</div>
 						</div>
-						<a class="item">建中電研社社團網站</a>
-						<a class="item">北一資研社社團 BBS 站</a>
-						<a class="item">聯絡我們</a>
+						<a class="item" href="http://ckeisc.nctucs.net/" target="_blank">建中電研社社團網站</a>
+						<a class="item" href="telnet://fgisc.org/" target="_blank">北一資研社社團 BBS 站</a>
+						<a class="item" href="mailto:yuwen41200.cs03@nctu.edu.tw" target="_blank">聯絡我們</a>
 					</div>
 				</div>
 				<img src="images/cat.png" class="ui medium image">
 				<div class="ui hidden transition information">
-					<h1 class="ui inverted header">第17x20屆 建北電資研 聯合幹部訓練營<br>
-					17x20th CKEFGISC United Leader Training Camp</h1>
-					<p>Tell people what is ADA ?</p>
+					<h1 class="ui inverted header">17&times;20<sup>th</sup> 建北電資研聯合幹部訓練營<br>
+					<span>CKEFGISC United Leader Training Camp</span></h1>
+					<p>幹部訓練營 (ADA) 旨在培訓新任社團幹部的專業技術與營隊籌辦能力</p>
 					<div class="large basic inverted animated fade ui button">
 						<div class="visible content">參加 ADA 2015</div>
-						<div class="hidden content">立刻報名！</div>
+						<div class="hidden content">立即報名！</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="ui vertical feature segment">
+	</header>
+	<section class="ui vertical feature segment">
 		<div class="ui centered page grid">
 			<div class="fourteen wide column">
-				<div class="ui three column center aligned stackable divided grid">
+				<div class="ui two column center aligned stackable divided grid">
 					<div class="column">
 						<div class="ui icon header">
-							<i class="student icon"></i>
-							Courses
+							<i class="student icon"></i>學術課程
 						</div>
-						<p>Take your kitty to a cat-ducation course and learn how to treat her well.</p>
-						<p>
-							<a class="ui button" href="#">
-								Learn
-							</a>
-						</p>
+						<p>時間：13<sup>th</sup> Jul - 17<sup>th</sup> Jul<br>
+						地點：臺北市立建國高級中學<br>
+						報名費：NT$ 1000</p>
 					</div>
 					<div class="column">
 						<div class="ui icon header">
-							<i class="code icon"></i>
-							Library
+							<i class="camera retro icon"></i>活動課程
 						</div>
-						<p>Dig through our cat library to found out amazing things you can do with your kitty.</p>
-						<p>
-							<a class="ui blue right labeled icon button" href="#">
-								Research
-								<i class="right chevron icon"></i>
-							</a>
-						</p>
-					</div>
-					<div class="column">
-						<div class="ui icon header">
-							<i class="user icon"></i>
-							Community
-						</div>
-						<p>Get feedback on your cat from a community of loving pet owners on our online bulletin board system.</p>
-						<p>
-							<a class="ui button" href="#">
-								Share
-							</a>
-						</p>
+						<p>時間：25<sup>th</sup> Jul - 27<sup>th</sup> Jul<br>
+						地點：救國團金山青年活動中心<br>
+						報名費：NT$ 1000</p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="ui inverted vertical segment">
+	</section>
+	<section class="ui inverted vertical segment">
 		<div class="ui very relaxed stackable page grid">
 			<div class="row">
 				<div class="column">
@@ -140,156 +119,85 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="ui vertical segment">
+	</section>
+	<section class="ui vertical segment">
 		<div class="ui stackable center aligned page grid">
 			<div class="row">
 				<div class="column">
-					<h1 class="ui header">
-						Many Companies Rely on Our Cat Knowledge
-					</h1>
-					<div class="ui horizontal divider"><i class="heart icon"></i></div>
-				</div>
-			</div>
-			<div class="four column logo row">
-				<div class="column">
-					<div class="ui shape">
-						<div class="sides">
-							<div class="active side">
-								<i class="huge github icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge facebook icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge maxcdn icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge pinterest icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge weibo icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge flickr icon"></i>
+					<h1 class="ui header">填寫報名表</h1>
+					<div class="ui form segment">
+						<p>所有資料僅供保險之用，未經當事人同意，本社不會將資料用做其他用途。</p>
+						<div class="field">
+							<div class="ui labeled input">
+								<div class="ui label">姓名</div>
+								<input name="name" type="text" placeholder="username@domain.net">
 							</div>
 						</div>
-					</div>
-				</div>
-				<div class="column">
-					<div class="ui shape">
-						<div class="sides">
-							<div class="side">
-								<i class="huge github icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge facebook icon"></i>
-							</div>
-							<div class="active side">
-								<i class="huge maxcdn icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge pinterest icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge weibo icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge flickr icon"></i>
+						<div class="field">
+							<div class="ui labeled input">
+								<div class="ui label">姓名</div>
+								<input name="name" type="text" placeholder="username@domain.net">
 							</div>
 						</div>
-					</div>
-				</div>
-				<div class="column">
-					<div class="ui shape">
-						<div class="sides">
-							<div class="side">
-								<i class="huge github icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge facebook icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge maxcdn icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge pinterest icon"></i>
-							</div>
-							<div class="active side">
-								<i class="huge weibo icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge flickr icon"></i>
+						<div class="field">
+							<div class="ui labeled input">
+								<div class="ui label">姓名</div>
+								<input name="email" type="text" placeholder="username@domain.net">
 							</div>
 						</div>
-					</div>
-				</div>
-				<div class="column">
-					<div class="ui shape">
-						<div class="sides">
-							<div class="side">
-								<i class="huge github icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge facebook icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge maxcdn icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge pinterest icon"></i>
-							</div>
-							<div class="side">
-								<i class="huge weibo icon"></i>
-							</div>
-							<div class="active side">
-								<i class="huge flickr icon"></i>
+						<div class="ui error message"></div>
+						<div class="field">
+							<div class="ui black animated submit button">
+								<div class="visible content">送出</div>
+								<div class="hidden content"><i class="right arrow icon"></i></div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="ui inverted footer vertical segment">
+	</section>
+	<footer class="ui inverted footer vertical segment">
 		<div class="ui stackable center aligned page grid">
 			<div class="ten wide column">
 				<div class="ui three column center aligned stackable grid">
 					<div class="column">
-						<h5 class="ui inverted header">Courses</h5>
-						<div class="ui inverted link list">
-							<a class="item">Registration</a>
-							<a class="item">Course Calendar</a>
-							<a class="item">Professors</a>
+						<h5 class="ui inverted header">建中電研社 (CKEISC)</h5>
+						<div class="ui inverted list">
+							<div class="item">臺北市立建國高級中學<br>
+							電子計算機研習社</div>
+							<div class="item">Chienkuo High School<br>
+							Electronic Industrial Study Club</div>
+							<div class="item">迄今為第 35 屆</div>
 						</div>
 					</div>
 					<div class="column">
-						<h5 class="ui inverted header">Library</h5>
-						<div class="ui inverted link list">
-							<a class="item">A-Z</a>
-							<a class="item">Most Popular</a>
-							<a class="item">Recently Changed</a>
+						<h5 class="ui inverted header">北一資研社 (FGISC)</h5>
+						<div class="ui inverted list">
+							<div class="item">臺北市立第一女子高級中學<br>
+							資訊研習社</div>
+							<div class="item">Taipei First Girls' High School<br>
+							Information Study Club</div>
+							<div class="item">迄今為第 29 屆</div>
 						</div>
 					</div>
 					<div class="column">
-						<h5 class="ui inverted header">Community</h5>
-						<div class="ui inverted link list">
-							<a class="item">BBS</a>
-							<a class="item">Careers</a>
-							<a class="item">Privacy Policy</a>
+						<h5 class="ui inverted header">建北電資研 (CKEFGISC)</h5>
+						<div class="ui inverted list">
+							<div class="item">建中電研社與北一資研社之合稱</div>
+							<div class="item">兩社始終維持密切的合作關係</div>
+							<div class="item">迄今已邁入第 20 年</div>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="six wide column">
-				<h5 class="ui inverted header">Contact Us</h5>
-				<addr>
-					237 Catberry Road <br>
-					Milton Keynes, London <br>
-				</addr>
-				<p>(404) 867-5309</p>
+				<p>Web Design by <a href="http://people.cs.nctu.edu.tw/~ywpu/" target="_blank">Yu-wen Pwu</a><br>
+				Based on <a href="http://semantic-ui.com/" target="_blank">Semantic UI</a></p>
+				<p>Released under the <a href="https://raw.githubusercontent.com/yuwen41200/ADA-Camp-2015/master/LICENSE" target="_blank">MIT License</a><br>
+				Get Source Code from <a href="https://github.com/yuwen41200/ADA-Camp-2015" target="_blank">GitHub</a> !</p>
 			</div>
 		</div>
-	</div>
+	</footer>
 </body>
 </html>
