--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<p>幹部訓練營 (ADA) 旨在培訓新任社團幹部的專業技術與營隊籌辦能力</p>
 					<div class="large basic inverted animated fade ui button">
 						<div class="visible content">參加 ADA 2015</div>
-						<div class="hidden content">立即報名！</div>
+						<div class="hidden content" onclick="goToApply()">立即報名！</div>
 					</div>
 				</div>
 			</div>
@@ -64,7 +64,7 @@
 						</div>
 						<p>時間：25<sup>th</sup> Jul - 27<sup>th</sup> Jul<br>
 						地點：救國團金山青年活動中心<br>
-						報名費：NT$ 1000</p>
+						報名費：NT$ 2500</p>
 					</div>
 				</div>
 			</div>
@@ -74,49 +74,44 @@
 		<div class="ui very relaxed stackable page grid">
 			<div class="row">
 				<div class="column">
-					<h1 class="center aligned ui inverted header">
-						The Best Cat Articles
-					</h1>
+					<h1 class="center aligned ui inverted header">課程資訊</h1>
 				</div>
 			</div>
 			<div class="row">
 				<div class="ten wide column">
-					<h3 class="ui inverted header">How to Win Your Cats Attention</h3>
-					<p>Getting your cat to notice you is a large part of being a pet owner. Although I have a lot of patience for writing things about cats, perhaps this might be enough body copy to make this section of text look filled out.</p>
-					<p>This and other tips can be found in our newsletter, amazing right?</p>
-					<div class="ui basic inverted animated button button">
-						<div class="visible content">Read More</div>
-						<div class="hidden content"><i class="right arrow icon"></i></div>
-					</div>
-					<div class="ui inverted section divider"></div>
-					<h3 class="ui inverted header">More articles</h3>
+					<h3 class="ui inverted header">課程時間表</h3>
 					<div class="ui inverted animated selection list">
-						<div class="item">
-							How to win in a fight with a cat
-							<div class="right floated">Jan 20, 2023</div>
+						<div class="item">電子布告欄系統 Bulletin Board System<br>
+						胡惠慈 / 1A / 實作
+							<div class="right floated">BBS 站台是用來討論或聯繫感情的優良工具，<br>
+							在現代多種通訊軟體充斥的年代，<br>
+							將帶領學弟妹深入了解 BBS 勝於其他平台的原因。</div>
 						</div>
-						<div class="item">
-							A Supposedly Fun Cat Toy I will Never Buy Again
-							<div class="right floated">Jan 1, 2023</div>
+						<div class="item">網頁前端 Front-end Development<br>
+						侯舜元、許承佑 / 1CD / 實作、電子講義
+							<div class="right floated">指導學生撰寫個人網頁，<br>
+							藉此熟悉語法，<br>
+							建立基本架構與套用版型設計。</div>
 						</div>
-						<div class="item">
-							Much ado about yarn
-							<div class="right floated">Dec 20, 2022</div>
+						<div class="item">經驗傳授 Experience Impartation<br>
+						林家瑜 / 3CD5B / 投影片、幹訓手冊
+							<div class="right floated">將學長姊的經驗傳承給學弟妹。</div>
 						</div>
 					</div>
 				</div>
 				<div class="six wide column">
 					<div class="ui form segment">
-						<h3 class="ui header">Bi-Daily Newsletter</h3>
-						<p>Sign up and get spammed with cats every day. We have no unsubscribe button!</p>
-						<div class="field">
-							<div class="ui left icon action input">
-								<i class="user icon"></i>
-								<input name="email" type="text" placeholder="name@email.com">
-								<div class="ui black submit button">Sign up</div>
-							</div>
-						</div>
-						<div class="ui error message"></div>
+						<h3 class="ui header">授課時段代碼說明</h3>
+						<p>數字 1 至 7 分別表示星期一至星期日。</p>
+						<p>A 表示 08:40 至 10:10 之時段，<br>
+						B 表示 10:30 至 12:00 之時段，<br>
+						X 表示午間時段，<br>
+						C 表示 13:40 至 15:10 之時段，<br>
+						D 表示 15:30 至 17:00 之時段，<br>
+						Y 表示晚間時段。</p>
+						<p>例如 2CD5A 表示授課時段為：<br>
+						星期二 13:40 至 15:10、15:30 至 17:00，<br>
+						及星期五 08:40 至 10:10。</p>
 					</div>
 				</div>
 			</div>
