--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>17&times;20th 建北電資研聯合幹部訓練營</title>
-	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.3/semantic.min.css">
-	<link rel="stylesheet" type="text/css" href="<?php echo $web_root; ?>/view/style/jquery.datetimepicker.css">
-	<link rel="stylesheet" type="text/css" href="<?php echo $web_root; ?>/view/style/main.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.3/semantic.min.css">
+	<link rel="stylesheet" type="text/css" href="style/jquery.datetimepicker.css">
+	<link rel="stylesheet" type="text/css" href="style/main.css">
 	<script>
 		/* jshint ignore:start */
-		var applicationStatusCode = <?php echo $application_status_code; ?>;
-		var applicationStatusMessage = <?php echo $application_status_message; ?>;
+		var applicationStatusCode = 0;
+		var applicationStatusMessage = "";
 		/* jshint ignore:end */
 	</script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.3/semantic.min.js"></script>
-	<script src="<?php echo $web_root; ?>/view/script/jquery.datetimepicker.js"></script>
-	<script src="<?php echo $web_root; ?>/view/script/main.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.3/semantic.min.js"></script>
+	<script src="script/jquery.datetimepicker.js"></script>
+	<script src="script/main.js"></script>
 </head>
 <body id="home">
 	<header class="ui inverted masthead segment">
@@ -251,7 +251,7 @@
 			<div class="row">
 				<div class="column">
 					<h1 class="ui header">填寫報名表</h1>
-					<form class="ui form segment" action="<?php echo $web_root; ?>/index/act/submitFormAction" method="post">
+					<form class="ui form segment" action="#" method="post">
 						<p>所有資料僅供保險之用，未經當事人同意，本社不會將資料用做其他用途。</p>
 						<div class="field">
 							<div class="ui labeled input">
@@ -355,7 +355,7 @@
 						</div>
 					</form>
 					<br>
-					<p><a href="<?php echo $web_root; ?>/index/ctl/enroll" target="_blank">已經報名？按這裡開始選課！</a></p>
+					<p><a href="form.html" target="_blank">已經報名？按這裡開始選課！</a></p>
 				</div>
 			</div>
 		</div>
